tests/toy/neg/001627_mutation.toylang
program a = { while a do sleep else; } .
